--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,10 +19,9 @@ set-option -g renumber-windows on
 ## Vim like navigation
 # Set new pane to open in current directory
 bind c new-window -c "#{pane_current_path}"
-# use <prefix> s for horizontal split
-bind s split-window -v -c "#{pane_current_path}"
-# use <prefix> v for vertical split
-bind v split-window -h -c "#{pane_current_path}"
+
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 
 #jump between panes
 bind h select-pane -L
@@ -38,3 +37,5 @@ bind + resize-pane -U 10
 set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g default-terminal "tmux-256color"
